@@ -1429,6 +1429,7 @@ E void FDECL(m_useup, (struct monst *,struct obj *));
 E void FDECL(m_throw, (struct monst *,int,int,int,int,int,struct obj *));
 E boolean FDECL(hits_bars, (struct obj **,int,int,int,int,int,int));
 E void FDECL(hit_bars, (struct obj **,int,int,int,int,boolean,boolean));
+E void FDECL(dissolve_bars, (int,int));
 
 /* ### muse.c ### */
 
