@@ -254,6 +254,7 @@ struct permonst *mptr;
 {
     return (boolean) (passes_walls(mptr) || amorphous(mptr) ||
 		      is_whirly(mptr) || verysmall(mptr) ||
+		      dmgtype(mptr, AD_DISN) ||
 		      (slithy(mptr) && !bigmonst(mptr)));
 }
 
